--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "moment": "^2.29.1",
     "next": "10.1.3",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
